improved ui(font)

--- a/index.html
+++ b/index.html
@@ -7,14 +7,16 @@
   <link rel="icon" type="image/vnd.microsoft.icon" href="calc.ico">
 
   <title>Adnan's Javascript Complex Scientific Calculator</title>
-
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Rajdhani:wght@600&display=swap" rel="stylesheet">
 
 </head>
 
 
-<body style="background-color: beige;">
+<body style="background-color: beige; font-family: 'Rajdhani', sans-serif;">
   <h1 align="center">
-    <font face="arial, helevica"><strong><u>Adnan's
+    <font face="'Rajdhani', sans-serif;"><strong><u>Adnan's
           JavaScript Complex Scientific Calculator</u></strong></font>
   </h1>
 
@@ -34,7 +36,7 @@
   <br />
 
   <form method="post" name="cmplxcalc" id="cmplxcalc">
-    <table style="height: 200px; width: 500px;" align="center" bgcolor="gray" border="0" cellpadding="3"
+    <table style="height: 200px; width: 500px;  border-radius: 5px;  " align="center" bgcolor="gray" border="0"cellpadding="3"
       cellspacing="3">
 
       <tbody>
@@ -163,5 +165,5 @@
     <li><strong>Ln:</strong> Natural logarithm</li>
   </ul>
 </body>
-//adnan al-emran
+<!-- adnan al-emran -->
 </html>
